dz1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-arch-dz1-dep
spec:
    replicas: 3
    selector:
       matchLabels:
          app: otus-arch-dz1-app
    template:
       metadata:
          labels:
             app: otus-arch-dz1-app
       spec:
          containers:
          - name: otus-arch-dz1
            image: viplokos/dz1_otus_arch:latest
            workingDir: /app
            ports:
              - name: web
                containerPort: 8000
