dz1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: otus-arch-dz1-app
  labels:
    app: otus-arch-dz1-app
spec:
  containers:
  - name: otus-arch-dz1
    image: viplokos/dz1_otus_arch:latest
    workingDir: /app
    ports:
      - containerPort: 8000
