dz1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-arch-dz1-service
spec:
  selector:
    app: otus-arch-dz1-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: NodePort
